modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-users/constraints/policy_1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8AllowedUsers
metadata:
  name: pod-security-standards
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
      - apiGroups: [""]
        kinds: ["ReplicationController"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
    namespaceSelector:
      matchLabels:
        custom-policy: example
  parameters:
    runAsUser:
      rule: MustRunAs
      ranges:
      - min: 1
        max: 10
    runAsGroup:
      rule: MustRunAs
      ranges:
      - min: 20
        max: 200
    fsGroup:
      rule: MustRunAs
      ranges:
      - min: 10
        max: 100
    supplementalGroups:
      rule: MustRunAs
      ranges:
      - min: 10
        max: 100
