modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-users/rendered/test_samples/other/001-047-disallowed-root-without-exception-in-restricted-ns-inv-1.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Namespace
metadata:
    labels:
        custom-policy: example
        security.deckhouse.io/pod-policy: restricted
    name: testns
