modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-users/rendered/test_samples/pods/001-003-allowed-runasnonroot-true-container.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-runasnonroot-true-container
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            runAsNonRoot: true
