modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-users/rendered/test_samples/pods/002-004-allowed-runasnonroot-true-pod.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-runasnonroot-true-pod
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    securityContext:
        runAsNonRoot: true
