modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-users/rendered/test_samples/pods/003-005-allowed-runasuser-non-zero-container.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-runasuser-non-zero-container
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            runAsUser: 1000
    initContainers:
        - image: nginx
          name: init
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
