modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-users/rendered/test_samples/pods/004-006-allowed-runasuser-non-zero-pod.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-runasuser-non-zero-pod
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    securityContext:
        runAsUser: 1000
