modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-users/rendered/test_samples/pods/005-002-allowed-deployment-runasnonroot-true-container.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: apps/v1
kind: Deployment
metadata:
    name: allowed-deployment-runasnonroot-true-container
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    replicas: 1
    selector:
        matchLabels:
            app: nginx
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
                - image: nginx
                  name: nginx
                  securityContext:
                    runAsNonRoot: true
