modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-users/rendered/test_samples/pods/007-010-disallowed-no-securitycontext.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-no-securitycontext
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            fsGroup: 50
            runAsGroup: 50
            supplementalGroups:
                - 50
    securityContext:
        fsGroup: 50
        runAsGroup: 50
        supplementalGroups:
            - 50
