modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-users/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-users
tests:
  - name: pss-restricted
    template: constraint-template.yaml
    constraint: ../constraints/pss_restricted.yaml
    cases:
      - name: 003-allowed-runasnonroot-true-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-003-allowed-runasnonroot-true-container.yaml
        assertions:
          - violations: "no"
      - name: 004-allowed-runasnonroot-true-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-004-allowed-runasnonroot-true-pod.yaml
        assertions:
          - violations: "no"
      - name: 005-allowed-runasuser-non-zero-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-005-allowed-runasuser-non-zero-container.yaml
        assertions:
          - violations: "no"
      - name: 006-allowed-runasuser-non-zero-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-006-allowed-runasuser-non-zero-pod.yaml
        assertions:
          - violations: "no"
      - name: 002-allowed-deployment-runasnonroot-true-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-002-allowed-deployment-runasnonroot-true-container.yaml
        assertions:
          - violations: "no"
      - name: 001-allowed-daemonset-runasnonroot-true-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/006-001-allowed-daemonset-runasnonroot-true-container.yaml
        assertions:
          - violations: "no"
      - name: 010-disallowed-no-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/007-010-disallowed-no-securitycontext.yaml
        assertions:
          - violations: "yes"
      - name: 012-disallowed-runasuser-zero-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/008-012-disallowed-runasuser-zero-container.yaml
        assertions:
          - violations: "yes"
      - name: 013-disallowed-runasuser-zero-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/009-013-disallowed-runasuser-zero-pod.yaml
        assertions:
          - violations: "yes"
      - name: 011-disallowed-runasnonroot-false-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/010-011-disallowed-runasnonroot-false-container.yaml
        assertions:
          - violations: "yes"
      - name: 009-disallowed-multiple-containers-one-root
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/011-009-disallowed-multiple-containers-one-root.yaml
        assertions:
          - violations: "yes"
      - name: 008-disallowed-deployment-runasuser-zero-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/012-008-disallowed-deployment-runasuser-zero-container.yaml
        assertions:
          - violations: "yes"
      - name: 007-disallowed-daemonset-runasuser-zero-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/013-007-disallowed-daemonset-runasuser-zero-container.yaml
        assertions:
          - violations: "yes"
  - name: security-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: 020-allowed-runasuser-in-range-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/014-020-allowed-runasuser-in-range-container.yaml
        assertions:
          - violations: "no"
      - name: 021-allowed-runasuser-in-range-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/015-021-allowed-runasuser-in-range-pod.yaml
        assertions:
          - violations: "no"
      - name: 023-allowed-runasuser-on-edge-min-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/016-023-allowed-runasuser-on-edge-min-container.yaml
        assertions:
          - violations: "no"
      - name: 022-allowed-runasuser-on-edge-max-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/017-022-allowed-runasuser-on-edge-max-container.yaml
        assertions:
          - violations: "no"
      - name: 019-allowed-runasgroup-in-range-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/018-019-allowed-runasgroup-in-range-container.yaml
        assertions:
          - violations: "no"
      - name: 018-allowed-fsgroup-in-range-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/019-018-allowed-fsgroup-in-range-pod.yaml
        assertions:
          - violations: "no"
      - name: 024-allowed-supplementalgroups-in-range-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/020-024-allowed-supplementalgroups-in-range-pod.yaml
        assertions:
          - violations: "no"
      - name: 015-allowed-all-fields-in-range
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/021-015-allowed-all-fields-in-range.yaml
        assertions:
          - violations: "no"
      - name: 014-allowed-all-fields-in-range-with-pod-level
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/022-014-allowed-all-fields-in-range-with-pod-level.yaml
        assertions:
          - violations: "no"
      - name: 017-allowed-deployment-runasuser-in-range-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/023-017-allowed-deployment-runasuser-in-range-container.yaml
        assertions:
          - violations: "no"
      - name: 016-allowed-daemonset-runasuser-in-range-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/024-016-allowed-daemonset-runasuser-in-range-container.yaml
        assertions:
          - violations: "no"
      - name: 029-disallowed-no-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/025-029-disallowed-no-securitycontext.yaml
        assertions:
          - violations: "yes"
      - name: 032-disallowed-runasuser-out-of-range-low-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/026-032-disallowed-runasuser-out-of-range-low-container.yaml
        assertions:
          - violations: "yes"
      - name: 031-disallowed-runasuser-out-of-range-high-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/027-031-disallowed-runasuser-out-of-range-high-container.yaml
        assertions:
          - violations: "yes"
      - name: 030-disallowed-runasgroup-out-of-range-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/028-030-disallowed-runasgroup-out-of-range-container.yaml
        assertions:
          - violations: "yes"
      - name: 027-disallowed-fsgroup-out-of-range-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/029-027-disallowed-fsgroup-out-of-range-pod.yaml
        assertions:
          - violations: "yes"
      - name: 033-disallowed-supplementalgroups-out-of-range-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/030-033-disallowed-supplementalgroups-out-of-range-pod.yaml
        assertions:
          - violations: "yes"
      - name: 028-disallowed-multiple-containers-one-out-of-range
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/031-028-disallowed-multiple-containers-one-out-of-range.yaml
        assertions:
          - violations: "yes"
      - name: 026-disallowed-deployment-runasuser-out-of-range-low-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/032-026-disallowed-deployment-runasuser-out-of-range-low-container.yaml
        assertions:
          - violations: "yes"
      - name: 025-disallowed-daemonset-runasuser-out-of-range-low-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/033-025-disallowed-daemonset-runasuser-out-of-range-low-container.yaml
        assertions:
          - violations: "yes"
      - name: 046-allowed-ephemeral-containers-in-range
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/034-046-allowed-ephemeral-containers-in-range.yaml
        assertions:
          - violations: "no"
  - name: pss-restricted-with-exception
    template: constraint-template.yaml
    constraint: ../constraints/pss_restricted.yaml
    cases:
      - name: 036-041-allowed-by-exception-root-user
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-036-041-allowed-by-exception-root-user-inv-1.yaml
        object: test_samples/pods/035-036-041-allowed-by-exception-root-user.yaml
        assertions:
          - violations: "no"
      - name: 035-038-allowed-by-exception-custom-user-range
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/002-035-038-allowed-by-exception-custom-user-range-inv-1.yaml
        object: test_samples/pods/036-035-038-allowed-by-exception-custom-user-range.yaml
        assertions:
          - violations: "no"
      - name: 036-042-allowed-by-exception-user-mismatch-but-constraint-allows
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-036-041-allowed-by-exception-root-user-inv-1.yaml
        object: test_samples/pods/037-036-042-allowed-by-exception-user-mismatch-but-constraint-allows.yaml
        assertions:
          - violations: "no"
      - name: 036-039-allowed-by-exception-mismatch-but-constraint-allows
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-036-041-allowed-by-exception-root-user-inv-1.yaml
        object: test_samples/pods/038-036-039-allowed-by-exception-mismatch-but-constraint-allows.yaml
        assertions:
          - violations: "no"
      - name: 036-040-allowed-by-exception-multiple-containers-all-allowed
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-036-041-allowed-by-exception-root-user-inv-1.yaml
        object: test_samples/pods/039-036-040-allowed-by-exception-multiple-containers-all-allowed.yaml
        assertions:
          - violations: "no"
      - name: 036-043-disallowed-by-exception-runasnonroot-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-036-041-allowed-by-exception-root-user-inv-1.yaml
        object: test_samples/pods/040-036-043-disallowed-by-exception-runasnonroot-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 044-disallowed-no-exception-label
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/041-044-disallowed-no-exception-label.yaml
        assertions:
          - violations: "yes"
      - name: 037-045-disallowed-by-exception-empty-spec
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/007-037-045-disallowed-by-exception-empty-spec-inv-1.yaml
        object: test_samples/pods/042-037-045-disallowed-by-exception-empty-spec.yaml
        assertions:
          - violations: "yes"
      - name: 047-disallowed-root-without-exception-in-restricted-ns
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/other/001-047-disallowed-root-without-exception-in-restricted-ns-inv-1.yaml
        object: test_samples/pods/043-047-disallowed-root-without-exception-in-restricted-ns.yaml
        assertions:
          - violations: "yes"
      - name: 048-allowed-root-with-matching-exception-in-restricted-ns
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/other/001-047-disallowed-root-without-exception-in-restricted-ns-inv-1.yaml
          - test_samples/spe/008-048-allowed-root-with-matching-exception-in-restricted-ns-inv-2.yaml
        object: test_samples/pods/044-048-allowed-root-with-matching-exception-in-restricted-ns.yaml
        assertions:
          - violations: "no"
      - name: 049-disallowed-root-with-non-matching-exception-in-restricted-ns
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/other/001-047-disallowed-root-without-exception-in-restricted-ns-inv-1.yaml
          - test_samples/spe/009-049-disallowed-root-with-non-matching-exception-in-restricted-ns-inv-2.yaml
        object: test_samples/pods/045-049-disallowed-root-with-non-matching-exception-in-restricted-ns.yaml
        assertions:
          - violations: "yes"
